Fix the extension doc page titles and flicker a bit.
TBR=rafaelw@chromium.org

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@22887 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: d13309e5456f2fd2e938a699de99df76a24234a0

--- a/chrome/common/extensions/docs/css/ApiRefStyles.css
+++ b/chrome/common/extensions/docs/css/ApiRefStyles.css
@@ -101,10 +101,6 @@ p#classSummary {
 .apiItem {
 }
 
-.hidden {
-  display: none;
-}
-
 #container {
   height:auto !important;
   margin:0;
